@@ -1,12 +1,0 @@
-core = 7.x
-api = 2
-
-projects[libraries][subdir] = contrib
-projects[libraries][version] = 2.0
-
-libraries[seadragon][download][type] = get
-libraries[seadragon][download][url] = https://github.com/aseemk/seadragon-ajax/zipball/v0.8.9
-
-libraries[openseadragon][download][type] = git
-libraries[openseadragon][download][url] = https://github.com/thatcher/openseadragon.git
-libraries[openseadragon][download][revision] = 1c7f5839f90c28e97c96c169fdf23da24826605f
